--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "~13.1.0",
     "body-parser": "^1.19.1",
     "chart.js": "^3.7.0",
+    "chartjs-plugin-datalabels": "^2.0.0",
     "ng2-charts": "^3.0.8",
     "rxjs": "~7.4.0",
     "tslib": "^2.3.0",
